trunk/Archive2/94/6719496cbe37bf/output
main.cpp:9:13: error: expected ';' after expression
       i = 0
            ^
            ;
main.cpp:15:30: warning: more '%' conversions than data arguments [-Wformat]
              printf ( "i = %d" );
                            ~^
main.cpp:11:22: warning: while loop has empty body [-Wempty-body]
       while (i <= 5);
                     ^
main.cpp:11:22: note: put the semicolon on a separate line to silence this warning
2 warnings and 1 error generated.
